Updated website pages

--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
               <a href="">
                 <img src="images/mail.png" alt="">
                 <span>
-                  Email: amb.elite@outlook.com
+                  Email: info@ambelite.co.uk
                 </span>
               </a>
             </div>
