--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ enhance their security and peace of mind.</p>
               <a href="">
                 <img src="images/mail.png" alt="">
                 <span>
-                  Email: amb.elite@outlook.com
+                  Email:  info@ambelite.co.uk
                 </span>
               </a>
             </div>
