--- a/blog.html
+++ b/blog.html
@@ -157,7 +157,7 @@
               <a href="">
                 <img src="images/mail.png" alt="">
                 <span>
-                  Email: amb.elite@outlook.com
+                  Email:  info@ambelite.co.uk
                 </span>
               </a>
             </div>
